fixed button alignment with rest of form

--- a/storefront/core/static/core/SignIn.css
+++ b/storefront/core/static/core/SignIn.css
@@ -75,6 +75,8 @@ nav ul li a:hover {
 #signInForm button {
     width: calc(100% - 20px); /* adjusted width with padding in mind */
     max-width: 300px; /* new max-width for a better aesthetic */
+    margin: 10px auto; /* centering the input fields */
+    padding: 10px;
     background-color: #76c893; /* Button color */
     color: #fff;
     border: none;
